fix toList method